--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-simple-typewriter": "^3.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "link-module-alias": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
