--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
+    "@types/react-modal": "^3.12.1",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.11",
     "link-module-alias": "^1.2.0"
   },
   "scripts": {
